--- a/app/pages/homepage/homepage.html
+++ b/app/pages/homepage/homepage.html
@@ -14,7 +14,7 @@
       <ion-icon name='cash' item-left></ion-icon>
       Valor total
       <ion-note item-right>
-        R$ {{ total }}
+        R$ {{ getTotalValue() }}
       </ion-note>
     </ion-item>
     <ion-item>
