--- a/app/pages/visit-report-list/visit-report-list.html
+++ b/app/pages/visit-report-list/visit-report-list.html
@@ -2,7 +2,7 @@
   <button menuToggle>
     <ion-icon name="menu"></ion-icon>
   </button>
-  <ion-title *ngIf="!isAnyReportSelected()">Reembolsos</ion-title>
+  <ion-title *ngIf="!isAnyReportSelected()">{{ refreshing ? 'Atualizando...' : 'Reembolsos' }}</ion-title>
   <ion-title *ngIf="isAnyReportSelected()">
     {{ selectedReportsCount }}
   </ion-title>
@@ -25,7 +25,7 @@
   <ion-list no-borders>
     <ion-item>
       <ion-label>Mês</ion-label>
-        <ion-select [(ngModel)]="month">
+        <ion-select [(ngModel)]="month" (change)="onMonthChange()">
           <ion-option *ngFor="let m of monthList" value="{{ m }}">{{ m }}</ion-option>
         </ion-select>
     </ion-item>
