Feitos alguns ajustes visuais

--- a/app/pages/homepage/homepage.html
+++ b/app/pages/homepage/homepage.html
@@ -8,7 +8,7 @@
 
 
 <ion-content class="getting-started">
-  <ion-item-divider light>Mês de Junho</ion-item-divider>
+  <ion-item-divider light>Mês de {{ getMonthName() }}</ion-item-divider>
   <ion-list no-lines class="overview">
     <ion-item>
       <ion-icon name='cash' item-left></ion-icon>
